@@ -4,6 +4,7 @@
         =========================
 
         CTA observations handle "statistic" attribute in XML file (#2238)
+        Use CSTAT and CHI2 instead of POISSON and GAUSSIAN for statistic (#2237)
         Changed GObservation::statistics() to statistic() (#2238)
         Prevent negative response values for COMPTEL IRF (#2234)
         Add GCTAOnOffObservation PHA, ARF and RMF constructor (#2231)
